@@ -56,6 +56,7 @@ $.fn.editInPlace.defaults = {
 	params:				"", // string: example: first_name=dave&last_name=hauenstein extra paramters sent via the post request to the server
 	field_type:			"text", // string: "text", "textarea", or "select";  The type of form field that will appear on instantiation
 	default_text:		"(Click here to add text)", // string: text to show up if the element that has this functionality is empty
+	use_html:			false, // boolean, set to true if the editor should use jQuery.fn.html() to extract the value to show from the dom node
 	textarea_rows:		10, // integer: set rows attribute of textarea, if field_type is set to textarea
 	textarea_cols:		25, // integer: set cols attribute of textarea, if field_type is set to textarea
 	select_text:		"Choose new value", // string: default text to show up in select box
@@ -66,7 +67,8 @@ $.fn.editInPlace.defaults = {
 	value_required:		false, // boolean: if set to true, the element will not be saved unless a value is entered
 	element_id:			"element_id", // string: name of parameter holding the id or the editable
 	update_value:		"update_value", // string: name of parameter holding the updated/edited value
-	original_html:		"original_html", // string: name of parameter holding original_html value of the editable
+	original_value:		'original_value', // string: name of parameter holding the updated/edited value
+	original_html:		"original_html", // string: name of parameter holding original_html value of the editable /* DEPRECATED in 2.2.0 */ use original_value instead.
 	save_if_nothing_changed:	false,  // boolean: submit to function or server even if the user did not change anything
 	on_blur:			"save", // string: "save" or null; what to do on blur; will be overridden if show_buttons is true
 	cancel:				"", // string: if not empty, a jquery selector for elements that will not cause the editor to open even though they are clicked. E.g. if you have extra buttons inside editable fields
@@ -85,8 +87,7 @@ $.fn.editInPlace.defaults = {
 function InlineEditor(settings, dom) {
 	this.settings = settings;
 	this.dom = dom;
-	this.originalHTML = null; // REFACT: rename, not sure what a better name would be though, preEditorHTML, savedHTML
-	this.originalText = null; // REFACT: rename.. not sure about the best name yet
+	this.originalValue = null;
 	this.didInsertDefaultText = false;
 	this.shouldDelayReinit = false;
 };
@@ -146,13 +147,8 @@ $.extend(InlineEditor.prototype, {
 		// prevent re-opening the editor when it is already open
 		this.dom.unbind('.editInPlace');
 		this.removeHoverEffect();
-		
-		// don't want the default text to show up in the new editor
 		this.removeInsertedDefaultTextIfNeccessary();
-		// save original text - for cancellation functionality
-		this.originalHTML = this.dom.html();
-		this.originalText = trim(this.dom.text());
-		
+		this.saveOriginalValue();
 		this.workaroundFirefoxBlurBug();
 		this.markEditorAsActive();
 		this.replaceContentWithEditor();
@@ -185,6 +181,20 @@ $.extend(InlineEditor.prototype, {
 		var eventTargetAndParents = $(eventTarget).parents().andSelf();
 		var elementsMatchingCancelSelector = eventTargetAndParents.filter(this.settings.cancel);
 		return 0 !== elementsMatchingCancelSelector.length;
+	},
+	
+	saveOriginalValue: function() {
+		if (this.settings.use_html)
+			this.originalValue = this.dom.html();
+		else
+			this.originalValue = trim(this.dom.text());
+	},
+	
+	restoreOriginalValue: function() {
+		if (this.settings.use_html)
+			this.dom.html(this.originalValue);
+		else
+			this.dom.text(this.originalValue);
 	},
 	
 	workaroundFirefoxBlurBug: function() {
@@ -228,7 +238,7 @@ $.extend(InlineEditor.prototype, {
 				+ 'rows="' + this.settings.textarea_rows + '" cols="' 
 				+ this.settings.textarea_cols + '"></textarea>');
 		
-		editor.val(this.originalText);
+		editor.val(this.originalValue);
 		return editor;
 	},
 	
@@ -254,7 +264,7 @@ $.extend(InlineEditor.prototype, {
 			var value = trim(currentTextAndValue[1] || currentTextAndValue[0]);
 			var text = trim(currentTextAndValue[0]);
 			
-			var selected = (value == this.originalText) ? 'selected="selected" ' : '';
+			var selected = (value == this.originalValue) ? 'selected="selected" ' : '';
 			var option = $('<option ' + selected + ' ></option>').val(value).text(text);
 			editor.append(option);
 		}
@@ -309,7 +319,7 @@ $.extend(InlineEditor.prototype, {
 	},
 	
 	handleCancelEditor: function() {
-		this.dom.html(this.originalHTML);
+		this.restoreOriginalValue();
 		this.reinit();
 	},
 	
@@ -347,7 +357,7 @@ $.extend(InlineEditor.prototype, {
 	
 	isUnchangedInput: function(enteredText) {
 		return ! this.settings.save_if_nothing_changed
-			&& this.originalText === enteredText;
+			&& this.originalValue === enteredText;
 	},
 	
 	showSaving: function() {
@@ -361,13 +371,13 @@ $.extend(InlineEditor.prototype, {
 	handleSubmitToCallback: function(enteredText) {
 		// REFACT: consider to encode enteredText and originalHTML before giving it to the callback
 		this.enableOrDisableAnimationCallbacks(true, false);
-		var newHTML = this.triggerCallback(this.settings.callback, /* DEPRECATED in 2.1.0 */ this.id(), enteredText, this.originalHTML, 
+		var newHTML = this.triggerCallback(this.settings.callback, /* DEPRECATED in 2.1.0 */ this.id(), enteredText, this.originalValue, 
 			this.settings.params, this.savingAnimationCallbacks());
 		
 		if (undefined === newHTML) {
 			/* failure; put original back */
 			this.reportError("Error: Failed to save value: " + enteredText);
-			this.dom.html(this.originalHTML);
+			this.restoreOriginalValue();
 		}
 		else
 			this.dom.html(newHTML);
@@ -382,7 +392,8 @@ $.extend(InlineEditor.prototype, {
 		var data = this.settings.update_value + '=' + encodeURIComponent(enteredText) 
 			+ '&' + this.settings.element_id + '=' + this.dom.attr("id") 
 			+ ((this.settings.params) ? '&' + this.settings.params : '')
-			+ '&' + this.settings.original_html + '=' + encodeURIComponent(this.originalHTML);
+			+ '&' + this.settings.original_html + '=' + encodeURIComponent(this.originalValue) /* DEPRECATED in 2.2.0 */
+			+ '&' + this.settings.original_value + '=' + encodeURIComponent(this.originalValue);
 		
 		this.enableOrDisableAnimationCallbacks(true, false);
 		this.didStartSaving();
